test_case/rust-lang_rust/22720_76031836.rs
 rust
use std::rc::Rc;

fn main() {
    match Rc::new(1) {
        Rc<_> => {}  // error: unexpected token: `<`
    }
}
